fix: wrong font in form fields

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -160,7 +160,6 @@ form {
     border: 1px solid lighten($color-charcoal, 40%);
     border-radius: 4px;
     font-size: 16px;
-    font-family: Inter;
   }
 
   input[disabled],
